[gd_scene load_steps=11 format=3 uid="uid://0l48xhgwan8c"]

[ext_resource type="Script" uid="uid://cp4yl285vvv8t" path="res://Scripts/main_menu.gd" id="1_1ehe0"]
[ext_resource type="FontFile" uid="uid://datde377oev7l" path="res://Assets/Fonts/Peaberry/PeaberryBase.ttf" id="2_ce3w2"]
[ext_resource type="Texture2D" uid="uid://povxtku8nxul" path="res://Assets/Images/backgroundpotential.png" id="2_trj04"]
[ext_resource type="PackedScene" uid="uid://dvor3tnbimskh" path="res://Scenes/settings_menu.tscn" id="5_n45e2"]
[ext_resource type="AudioStream" uid="uid://cwcu2gsi2r3co" path="res://Assets/Music/Opening Track.mp3" id="9_trj04"]

[sub_resource type="LabelSettings" id="LabelSettings_opfnp"]
font = ExtResource("2_ce3w2")
font_size = 60

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_cp0ys"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yhxw7"]
bg_color = Color(0.823529, 0.823529, 0.823529, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 3
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_trj04"]
bg_color = Color(0.635294, 0.635294, 0.635294, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 3
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_16hvj"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 3
shadow_offset = Vector2(0, 3.41)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_1ehe0")

[node name="TextureRect" type="TextureRect" parent="."]
z_index = -1
layout_mode = 0
offset_right = 1280.0
offset_bottom = 720.0
texture = ExtResource("2_trj04")
expand_mode = 3

[node name="MenuControls" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 1280.0
offset_bottom = 720.0

[node name="Label" type="Label" parent="MenuControls"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Phantom Limb"
label_settings = SubResource("LabelSettings_opfnp")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="MenuControls"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_top = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="MenuControls/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="PlayButton" type="Button" parent="MenuControls/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(250, 60)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_cp0ys")
theme_override_styles/hover = SubResource("StyleBoxFlat_yhxw7")
theme_override_styles/pressed = SubResource("StyleBoxFlat_trj04")
theme_override_styles/normal = SubResource("StyleBoxFlat_16hvj")
text = "Start Game"

[node name="SettingsButton" type="Button" parent="MenuControls/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(250, 60)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_cp0ys")
theme_override_styles/hover = SubResource("StyleBoxFlat_yhxw7")
theme_override_styles/pressed = SubResource("StyleBoxFlat_trj04")
theme_override_styles/normal = SubResource("StyleBoxFlat_16hvj")
text = "Settings
"

[node name="SettingsMenu" parent="." instance=ExtResource("5_n45e2")]
visible = false
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_right = 1280.0
offset_bottom = 720.0
grow_horizontal = 1
grow_vertical = 1

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_trj04")
autoplay = true
bus = &"Music"
parameters/looping = false
